hphp/test/zend/good/zend-traits/get_declared_traits_001.php
<?php

class a { }
interface b { }
trait c { }
abstract class d { }
final class e { }

var_dump(get_declared_traits());

?>