hphp/test/zend/bad/Zend/tests/traits/get_declared_traits_003.php
<?php

class a { }
interface b { }
trait c { }
abstract class d { }
final class e { }
var_dump(get_declared_classes());
var_dump(get_declared_traits());

?>